--- a/jobs.css
+++ b/jobs.css
@@ -64,12 +64,34 @@
 }
 
 .rec-job-card {
+  padding: 20px;
   margin-top: 20px;
-  height: 420px;
-  width: 30%;
+  height: 340px;
+  width: 24%;
   border: 2px solid gainsboro;
 }
 
 .rec-job-card:hover {
   box-shadow: 0px 19px 19px rgba(33, 33, 33, 0.2);
+}
+
+.job-logo{
+  object-fit: contain;
+  width: 100%;
+  height: 200px;
+}
+
+.job-title{
+  letter-spacing: 0.8px;
+  text-align: center;
+  margin-top: 20px;
+  font-size: 1.2rem;
+  font-weight: 700;
+}
+
+.company-name{
+  font-family: 'Courier New', Courier, monospace;
+  text-align: center;
+  font-size: 0.9rem;
+  margin-top: -10px;
 }
