--- a/network.css
+++ b/network.css
@@ -1,15 +1,101 @@
 .side-menu {
-    height: 400px;
-    width: 76%;
-    background-color: white;
-    border-radius: 10px;
-    display: flex;
-    padding: 14px;
+  height: 440px;
+  width: 76%;
+  background-color: white;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  padding: 14px;
 }
 
 .invitation-bar {
-    width: 100%;
-    height: 80px;
-    background-color: white;
+  margin-left: -80px;
+  width: 100%;
+  height: 60px;
+  background-color: white;
+  padding: 14px;
+  display: flex;
 }
 
+.side-menu-icon {
+  height: 30px;
+  width: 30px;
+  margin-right: 10px;
+}
+
+.side-menu-icon-with-text {
+  display: flex;
+}
+
+.side-menu-icon-with-text > a > p {
+  padding-top: 4px;
+}
+
+.side-menu-icon-with-text > a {
+  padding-left: 10px;
+  padding-bottom: 10px;
+  text-decoration: none;
+  color: black;
+  display: flex;
+  flex-direction: row;
+}
+
+.invitation-text {
+  padding-top: 5px;
+  font-weight: 900;
+}
+
+.invitation-manage {
+  padding-left: 560px;
+  padding-top: 5px;
+  text-decoration: none;
+  color: grey;
+}
+
+.network-rec-users-bar {
+  padding: 35px;
+  display: flex;
+  justify-content: space-between;
+  flex-flow: row wrap;
+  margin-top: 40px;
+  height: 900px;
+  width: 100%;
+  margin-left: -80px;
+  background-color: white;
+}
+
+.rec-user-card {
+  width: 28%;
+  height: 240px;
+  border: 2px solid gainsboro;
+}
+
+.rec-user-card:hover {
+  box-shadow: 0px 19px 19px rgba(33, 33, 33, 0.2);
+}
+
+.network-user-dp {
+  object-fit: contain;
+  height: 60%;
+  width: 100%;
+}
+
+.network-username {
+  letter-spacing: 0.8px;
+  margin-top: 10px;
+  font-weight: bold;
+  text-align: center;
+}
+
+.follow-button {
+  margin-left: 30px;
+  background-color: white;
+  height: 30px;
+  width: 70%;
+  border: 2px solid blue;
+  border-radius: 30px;
+}
+
+.follow-button:hover {
+  background-color: lightcyan;
+}
